--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -21,7 +21,7 @@
         android:focusable="true"
         >
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/item_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
