Rename class name because confusing as platform class

--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="item"
-            type="jp.gcreate.sample.samplearchitecturecomponent.data.ListItem"
+            type="jp.gcreate.sample.samplearchitecturecomponent.data.SampleListItem"
             />
 
     </data>
