Add ViewModel which requests constructor parameter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,5 +37,12 @@
             android:text="open list activity"
             />
 
+        <Button
+            android:id="@+id/open_custom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="open custom viewmodel activity"
+            />
+
     </LinearLayout>
 </layout>
